--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,4 +1,12 @@
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+</head>
+
+<body>
 <div class="timeline-navbar fixed-content">
+  {{!-- <button id="dark-mode-toggle" class="global-button toggle-button">Toggle Dark Mode</button> --}}
+  <i id="dark-mode-toggle" class="fas fa-moon toggle-button"></i>
+
   <div class="topbar">
     <div class="icon large-icon">{{icon}}</div>
     <h1 class="title">Acebook</h1>
@@ -49,7 +57,7 @@
   </div>
   {{/each}}
 </div>
-
+</body>
 
 
 <script>
@@ -67,5 +75,44 @@
       window.scrollTo(0, scrollPosition);
     }
   });
+
+
+// Get the dark mode toggle button element
+const darkModeToggle = document.getElementById('dark-mode-toggle');
+
+// Check if the user's preference is stored in localStorage
+const isDarkMode = localStorage.getItem('darkMode') === 'true';
+
+// Set the initial state of dark mode based on the user's preference
+if (isDarkMode) {
+  document.body.classList.add('dark-mode');
+  darkModeToggle.classList.add('fa-sun');
+} else {
+  document.body.classList.remove('dark-mode');
+  darkModeToggle.classList.add('fa-moon');
+}
+
+// Toggle dark mode when the button is clicked
+darkModeToggle.addEventListener('click', () => {
+  // Toggle the dark mode class on the body element
+  document.body.classList.toggle('dark-mode');
+  darkModeToggle.classList.toggle('fa-sun');
+  darkModeToggle.classList.toggle('fa-moon');
+
+  // Update the button text and store the dark mode preference
+  if (document.body.classList.contains('dark-mode')) {
+    localStorage.setItem('darkMode', 'true');
+  } else {
+    localStorage.setItem('darkMode', 'false');
+  }
+});
+
+    // Scroll to top functionality
+    const goTopLink = document.querySelector('.go-top');
+    goTopLink.addEventListener('click', (event) => {
+      event.preventDefault();
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+
 </script>
 
