--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,18 +1,23 @@
-<div class="banner">
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+</head>
+<body>
+  <div class="banner">
+    <i id="dark-mode-toggle" class="fas fa-moon toggle-button"></i>
   <a><h1 class="title">Acebook</h1></a>
 </div>
 
 <div class="new-content white-box">
-  <h1>Signup</h1>
+  <h1 class="signup-title">Signup</h1>
   <form id="new-user-form" action="/users" method="post">
     {{#if error }}
       <div class="error-message">
       {{error}}
       </div>
     {{/if}}
-    <input id="first-name" type="first-name" name="firstName" maxlength="20" placeholder="first name" required class="input-box">
-    <input id="last-name" type="last-name" name="lastName" maxlength="20" placeholder="last name" required class="input-box">
-    <input id="email" type="email" name="email" placeholder="email" required class="input-box">
+    <input id="first-name" type="first-name" name="firstName" maxlength="20" placeholder="First Name" required class="input-box">
+    <input id="last-name" type="last-name" name="lastName" maxlength="20" placeholder="Last Name" required class="input-box">
+    <input id="email" type="email" name="email" placeholder="Email" required class="input-box">
     <ul class="password-requirement">
       Passwords must contain:
       <li>At least 8 characters</li>
@@ -20,8 +25,8 @@
       <li>At least one number</li> 
       <li>At least one special characters</li> 
     </ul>
-    <input id="password" type="password" name="password" placeholder="password" required class="input-box">
-    <input id="confirmPassword" type="password" name="confirmPassword" placeholder="confirm password" required class="input-box">
+    <input id="password" type="password" name="password" placeholder="Password" required class="input-box">
+    <input id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirm Password" required class="input-box">
     <div class="icon-select">
       <input type="radio" name="icon" value=":)" class="icon-radio"><div class="icon">:)</div>
       <input type="radio" name="icon" value=":o" class="icon-radio"><div class="icon">:o</div>
@@ -37,5 +42,39 @@
     <input id="submit" type="submit" value="Submit" class="global-button">
   </form>
   <br>
-  <p>Did you mean <a href="/sessions/new">login</a>?</p>
+  <p class="divert-text">Did you mean <a href="/sessions/new">login</a>?</p>
 </div>
+</body>
+
+<script>
+// Get the dark mode toggle button element
+const darkModeToggle = document.getElementById('dark-mode-toggle');
+
+// Check if the user's preference is stored in localStorage
+const isDarkMode = localStorage.getItem('darkMode') === 'true';
+
+// Set the initial state of dark mode based on the user's preference
+if (isDarkMode) {
+  document.body.classList.add('dark-mode');
+  darkModeToggle.classList.add('fa-sun');
+} else {
+  document.body.classList.remove('dark-mode');
+  darkModeToggle.classList.add('fa-moon');
+}
+
+// Toggle dark mode when the button is clicked
+darkModeToggle.addEventListener('click', () => {
+  // Toggle the dark mode class on the body element
+  document.body.classList.toggle('dark-mode');
+  darkModeToggle.classList.toggle('fa-sun');
+  darkModeToggle.classList.toggle('fa-moon');
+
+  // Update the button text and store the dark mode preference
+  if (document.body.classList.contains('dark-mode')) {
+    localStorage.setItem('darkMode', 'true');
+  } else {
+    localStorage.setItem('darkMode', 'false');
+  }
+});
+
+</script> 
