--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -50,7 +50,7 @@
     </div>
     <div class="post-comment-sec">
       <form action="/posts/{{this._id}}/comments" method="POST" id="new-comment-form">
-        <input id="comment" type="text" name="comment" value="" placeholder="Say something..." class="comment-box input-box" required>
+        <input id="comment" type="text" name="comment" value="" placeholder="Say something..." class="comment-box input-box" maxlength="114" required>
         <input type="submit" value="Submit" class="global-button">
       </form>
     </div>
