appropiate stylesheet for each views page

--- a/views/users/signup.hbs
+++ b/views/users/signup.hbs
@@ -11,7 +11,7 @@
 
 <div class="wrapper">
   <div class="title">
-    Signup Form
+    Signup Form ♤
   </div>
 
   <form id="new-user-form" action="/users" method="post">
