--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -7,6 +7,6 @@
   <title>{{title}}</title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head> --}}
-<h1 class="title">{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{!-- <h1 class="title">{{title}}</h1>
+<p>Welcome to {{title}}</p> --}}
 
