--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -41,7 +41,7 @@
 
 
   <h1>Timeline</h1>
-{#each posts}}
+{{#each posts}}
   <li>
     <p>{{this.postAuthor.firstName}} {{this.postAuthor.lastName}} posted:</p>
 
