--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -1,3 +1,7 @@
+<head>
+  <title>About Acebook</title>
+</head>
+
 <div class="timeline-navbar">
   <div class="topbar">
     <h1 class="title">Acebook</h1>
