--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,11 +1,12 @@
 <head>
+  <title>Homepage</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 </head>
 <body>
     <i id="dark-mode-toggle" class="fas toggle-button"></i>
     <div class="homepage-content">
-         
+
     <div class="left-container">
         <h1 class="title">{{title}}</h1>
         <p class="slogan">Making people's lives Betta</p>
