--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,4 +1,5 @@
 <head>
+  <title>Your Timeline</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
@@ -11,12 +12,12 @@
     <div class="icon large-icon">{{icon}}</div>
     <h1 class="title">Acebook</h1>
     <form action='/sessions?_method=DELETE' method='POST'>
-      <input type="submit" value="Log Out" class="global-button logout">
+      <input type="submit" value="Log Out" class="global-button logout" tabindex="1">
     </form>
   </div>
   <div class="bottombar">
-    <a class="global-button new-post-link" href="/posts/new">Create Post</a>
-    <a href="/posts" class="go-top">Back to top</a>
+    <a class="global-button new-post-link" href="/posts/new" tabindex="2">Create Post</a>
+    <a href="/posts" class="go-top" tabindex="3">Back to top</a>
   </div>
 </div>   
 
@@ -50,8 +51,9 @@
     </div>
     <div class="post-comment-sec">
       <form action="/posts/{{this._id}}/comments" method="POST" id="new-comment-form">
-        <input id="comment" type="text" name="comment" value="" placeholder="Say something..." class="comment-box input-box" maxlength="114" required>
-        <input type="submit" value="Submit" class="global-button">
+        <label for="comment">Comment:</label>
+        <input id="comment" type="text" name="comment" value="" placeholder="Say something..." class="comment-box input-box" aria-label="Type comment here" required>
+        <button type="submit" class="global-button">Submit</button>
       </form>
     </div>
   </div>
