--- a/views/partials/posts/comment.hbs
+++ b/views/partials/posts/comment.hbs
@@ -2,11 +2,15 @@
   <p><i>{{comment.content}}</i><br />
     <span class="comment-author">Posted by {{comment.user}}</span>
   </p>
-   {{comment.currentUser}}
-  {{#if comment.currentUser}}
-      <form action="/comments/{{comment._id}}/delete" method="POST" onsubmit="return showConfirmation(event)">
-        <input type="hidden" name="_method" value="DELETE">
-        <button type="submit" class="delete-button">Delete</button>
-      </form>
-    {{/if}}
+
+{{#if comment.currentUser}}
+  <form action="/comments/{{comment._id}}/delete"
+  method="POST"
+  onsubmit="return confirm('Are you sure you want to delete this post?')">
+    <input type="hidden" name="_method" value="DELETE" />
+    <button type="submit" class="delete-button">Delete</button>
+  </form>
+{{/if}}
+</li>
+
 </li>
