--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,7 +1,7 @@
 <div class="timeline-navbar fixed-content">
   <div class="topbar">
     <div class="icon large-icon">{{icon}}</div>
-    <h1 class="title">Acebook</h1>
+      <a href="/about"><h1 class="title">Acebook</h1></a>
     <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out" class="global-button logout">
     </form>
@@ -16,22 +16,34 @@
   {{#each posts}}
   <div class="posts">
     <div class="post-sec">
-      <div class="icon post-icon">{{this.authorIcon}}</div> 
+      {{#ifEquals this.authorID nemesis}}
+        <div class="nemesis-icon">😈</div>
+      {{/ifEquals}}
+      <form action="/posts/{{this.authorID}}/make-nemesis" method="POST" name="makeNemesis">
+        <div class="icon post-icon" onclick="document.forms['makeNemesis'].submit()">{{this.authorIcon}}</div> 
+      </form>
       <div class="post-details">
         <p class="author-name">{{this.author}}</p>
         {{#if gifUrl}}
           <img src="{{gifUrl}}" class="post-gif">
         {{/if}}
         <p class="message">{{{this.message}}}</p>
+        <p>{{this.authorID}}</p>
+        <p>{{req.session.user.nemesis}}</p>
         <div class="likes">
           <form action="/posts/{{this._id}}/likes" method="POST" id="like-post">
             <input type="submit" value="👍" class="global-button like-button">
-            <p class="likes-count">{{this.likes}}</p>
+            <p class="likes-count">
+              {{#if this.likes.length}}
+                {{this.likes.length}}
+              {{else}}
+                0
+              {{/if}}
+            </p>
           </form>
         </div>
       </div>
     </div>
-
     <div class="comments-sec">
       {{#each this.comments}}
         <div class="comment">
@@ -49,8 +61,6 @@
   </div>
   {{/each}}
 </div>
-
-
 
 <script>
   window.addEventListener('beforeunload', function() {
