--- a/views/partials/posts/new_comment.hbs
+++ b/views/partials/posts/new_comment.hbs
@@ -9,5 +9,9 @@
     placeholder="Type your comment here ..."
     required
   />
-  <button type="submit" class="comment-button">Comment</button>
+  <button
+    type="submit"
+    id="submit"
+    class="btn btn-primary btn-sm float-right"
+  >Comment</button>
 </form>
