--- a/views/partials/posts/comment.hbs
+++ b/views/partials/posts/comment.hbs
@@ -1,5 +1,4 @@
-<li class="comment-item">
-  <p><i>{{comment.content}}</i><br />
-    <span class="comment-author">Posted by {{comment.user}}</span>
-  </p>
-</li>
+<p class="comment-item">
+  <i>{{comment.content}}</i><br />
+  <span class="comment-author">Posted by {{comment.user}}</span>
+</p>
