--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -3,55 +3,58 @@
 {{/if}}
 
 <h1 class="text-center mb-4">Sign Up</h1>
-<form
-  id="new-user-form"
-  action="/users"
-  method="post"
-  enctype="multipart/form-data"
->
-  <div class="form-group">
-    <label for="username">Username:</label>
-    <input
-      type="username"
-      class="form-control custom-input"
-      id="username"
-      name="username"
-      placeholder="Enter your username"
-      required
-    />
-  </div>
-  <div class="form-group">
-    <label for="email">Email:</label>
-    <input
-      type="email"
-      class="form-control custom-input"
-      id="email"
-      name="email"
-      placeholder="Enter your email"
-      required
-    />
-  </div>
-  <div class="form-group">
-    <label for="password">Password:</label>
-    <input
-      type="password"
-      class="form-control custom-input"
-      id="password"
-      name="password"
-      placeholder="Enter your password"
-      required
-    />
-  </div>
-  <div class="form-group">
-    <label for="image">Profile Image:</label>
-    <input
-      type="file"
-      class="form-control custom-input"
-      id="image"
-      name="image"
-    />
-  </div>
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary btn-block" id="submit">Sign Up</button>
-  </div>
-</form>
+<div class="container">
+  <form
+    id="new-user-form"
+    action="/users"
+    method="post"
+    enctype="multipart/form-data"
+  >
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input
+        type="username"
+        class="form-control custom-input"
+        id="username"
+        name="username"
+        placeholder="Enter your username"
+        required
+      />
+    </div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input
+        type="email"
+        class="form-control custom-input"
+        id="email"
+        name="email"
+        placeholder="Enter your email"
+        required
+      />
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input
+        type="password"
+        class="form-control custom-input"
+        id="password"
+        name="password"
+        placeholder="Enter your password"
+        required
+      />
+    </div>
+    <div class="form-group">
+      <label for="image">Profile Image:</label>
+      <input
+        type="file"
+        class="form-control custom-input"
+        id="image"
+        name="image"
+      />
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary btn-block" id="submit">Sign
+        Up</button>
+    </div>
+  </form>
+</div>
