--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -1,4 +1,4 @@
-<h1>Name</h1>
+<h1 class="username">Name</h1>
 <a href="../posts">Timeline</a>
 <form action="/sessions?_method=DELETE" method="POST">
   <input type="submit" value="Log Out" />
