--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -1,13 +1,9 @@
-<head>
-  <title>About Acebook</title>
-</head>
-
-<div class="timeline-navbar">
-  <div class="topbar">
-    <h1 class="title">Acebook</h1>
-  </div>
+ <div class="banner">
+      <i id="dark-mode-toggle" class="fas fa-moon toggle-button"></i>
+  <a><h1 class="title">Acebook</h1></a>
+</div>
   <div class="bottombar">
-    <a href="/" class="go-top">Back to Home</a>
+    <a href="/posts" class="go-top">Back to Posts</a>
   </div>
 
   <div class="container-about">
@@ -20,37 +16,37 @@
     </p>
   <div class="photos_div">
     {{!-- Nish --}}
-    <a href="#">
-      <img class="team photo" src="#" alt="#"></img>
+    <a href="https://github.com/nrai14">
+      <img class="team photo" src="/images/nish.png" alt="profile picture of Nishad" />
     </a>
     {{!-- Ollie W--}}
-     <a href="#">
-      <img class="team photo" src="#" alt="#"></img>
-    </a>
-    {{!-- Jasmine --}}
-     <a href="#">
-      <img class="team photo" src="#" alt="#"></img>
-    </a>
-    {{!-- Afzaa --}}
-     <a href="#">
-      <img class="team photo" src="#" alt="#"></img>
-    </a>
-    {{!-- Ollie C --}}
-     <a href="#">
-      <img class="team photo" src="#" alt="#"></img>
-    </a>
-    {{!-- Emre --}}
-     <a href="#">
-      <img class="team photo" src="#" alt="#"></img>
-    </a>
-    {{!-- Sam --}}
-     <a href="#">
-      <img class="team photo" src="#" alt="#"></img>
-    </a>
-    {{!-- Stefan --}}
-     <a href="#">
-      <img class="team photo" src="#" alt="#"></img>
-    </a>
+    <a href="https://github.com/gwaarb">
+    <img class="team photo" src="/images/olliew.png" alt="profile picture of Oliver W"></img>
+  </a>
+  {{!-- Jasmine --}}
+    <a href="https://github.com/jasmine-asra">
+    <img class="team photo" src="/images/jasmin.jpg" alt="profile picture of Jasmine"></img>
+  </a>
+  {{!-- Afzaa --}}
+    <a href="https://github.com/afzaa25">
+    <img class="team photo" src="/images/afzaa.png" alt="profile picture of Afzaa"></img>
+  </a>
+  {{!-- Ollie C --}}
+    <a href="https://github.com/olic32">
+    <img class="team photo" src="/images/olliec.jpg" alt="profile picture of Oliver C"></img>
+  </a>
+  {{!-- Emre --}}
+    <a href="https://github.com/devCoder69409">
+    <img class="team photo" src="/images/emre.jpg" alt="profile picture of Emre"></img>
+  </a>
+  {{!-- Sam --}}
+    <a href="https://github.com/samgeorge21">
+    <img class="team photo" src="/images/sam.jpg" alt="profile picture of Sam"></img>
+  </a>
+  {{!-- Stefan --}}
+    <a href="https://github.com/S-Spencer">
+    <img class="team photo" src="/images/stefan.jpg" alt="profile picture of Stefan"></img>
+  </a>
   </div>
 
 
@@ -76,7 +72,7 @@ So, what are you waiting for? Dive into Acebook, where unicorns roam free, the l
 
 </div>
 <div class="footer">
-        <a href="#">
-            <img src="public/images/makers.png" class="photo"></a>
+        <a href="https://github.com/nrai14/acebook-betta">
+            <img class="photo" src="/images/github1.png"/></a>
         <h2 className="Copyright"> © 2023 AceBook</h2>
     </div>
