--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -10,7 +10,7 @@
 
   <div class="topbar">
     <div class="icon large-icon">{{icon}}</div>
-    <h1 class="title">Acebook</h1>
+      <a href="/about"><h1 class="title">Acebook</h1></a>
     <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out" class="global-button logout" tabindex="1">
     </form>
