--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -9,7 +9,7 @@
       <i id="dark-mode-toggle" class="fas fa-moon toggle-button"></i>
   <div class="topbar">
     <div class="icon large-icon">{{icon}}</div>
-    <h1 class="title">Acebook</h1>
+    <a href="/about"><h1 class="title">Acebook</h1></a>
     <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out" class="global-button logout">
     </form>
