--- a/views/partials/posts/form.hbs
+++ b/views/partials/posts/form.hbs
@@ -3,7 +3,9 @@
   action="/posts"
   method="post"
   enctype="multipart/form-data"
+  class="sticky-post"
 >
+  <h2 class="titles">New Message</h2>
   <div class="form-message">
     <label for="message-input"></label>
     <textarea
