--- a/views/partials/posts/comment.hbs
+++ b/views/partials/posts/comment.hbs
@@ -7,10 +7,13 @@
     <form
       action="/comments/{{comment._id}}/delete"
       method="POST"
-      onsubmit="return confirm('Are you sure you want to delete this post?')"
+      onsubmit="return confirm('Are you sure you want to delete this comment?')"
     >
       <input type="hidden" name="_method" value="DELETE" />
-      <button type="submit" class="delete-button">Delete</button>
+      <button
+        type="submit"
+        class="delete-button btn btn-primary float-right"
+      >Delete</button><br /><br />
     </form>
   {{/if}}
 </li>
