--- a/views/partials/posts/post.hbs
+++ b/views/partials/posts/post.hbs
@@ -18,13 +18,6 @@
       <img src="{{post.user.image}}" class="avatar">
     {{/if}}
 
-    {{#if post.currentUser}}
-      <button class="edit-button" id="editBtn-{{post.id}}">Edit</button>
-      <form action="/posts/{{post.id}}/delete" method="POST">
-        <input type="hidden" name="_method" value="DELETE">
-        <input type="submit" value="Delete" onclick="return confirm('Are you sure you want to delete this post?')">
-      </form>
-    {{/if}}
 
     <ul class="post-comment" id="comments-{{post.id}}">
       {{#each post.comments}}
@@ -39,11 +32,11 @@
 
 <div class="edit-delete">
     {{#if post.currentUser}}
-      <form action="/posts/{{post._id}}/delete" method="POST">
-      <a href="/posts/{{post._id}}/edit" class="btn btn-primary" id="submit">Edit</a>
+      <button class="edit-button btn btn-primary" id="editBtn-{{post.id}}">Edit</button>
+      <form action="/posts/{{post.id}}/delete" method="POST">
         <input type="hidden" name="_method" value="DELETE">
         <input type="submit" id="submit" class="btn btn-primary" value="Delete" onclick="return confirm('Are you sure you want to delete this post?')">
-      </form><br><br>
+      </form>
     {{/if}}
 </div>
 
@@ -52,9 +45,9 @@
 <div id="editModal-{{post._id}}" class="modal">
   <div class="modal-content">
     <form class="updateForm" action="/posts/{{post._id}}/update" method="post" enctype="application/x-www-form-urlencoded">
-      <label for="message">Message:</label>
-      <textarea id="message" name="message">{{post.message}}</textarea><br/>
-      <input type="submit" value="Update Post"/>
+      <label for="message"><h2 class="titles">Message:</h2></label>
+      <textarea id="message" name="message" rows="4">{{post.message}}</textarea><br/>
+      <input type="submit" value="Update Post" id="submit" class="btn btn-primary"/>
     </form>
   </div>
 </div>
