added express helper for likes and delete method

--- a/views/posts/edit.hbs
+++ b/views/posts/edit.hbs
@@ -1,6 +1,6 @@
 <h1>Edit Post</h1>
 
-<li class="date">Created at: {{post.date}}</li>
+<li class="date">Created at: {{formatDate post}}</li>
       <br>
       <li class="username">Created By: {{post.username}}</li>
       <br> 
