--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -16,7 +16,7 @@
 <ul>
   {{#each posts}}
   <br>
-    <li class="date">Created at: {{this.date}}</li>
+    <li class="date">Created at: {{formatDate this}}</li>
       <br>
       <li class="username">Created By: {{{this.username}}}</li>
       <br> 
